# rs-wgpu-engin

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/app/: application.rs  dsl.rs  mod.rs
src/core/: attribute.rs  geometry.rs  mod.rs  resource.rs
src/helpers/: geometry_helper.rs  mod.rs
src/materials/: material.rs
src/math/: cgmath.rs
src/objects/: camera.rs  mesh.rs  mod.rs  node.rs
src/render/: mod.rs  renderer.rs  wgpu_attributes.rs  wgpu_render_pipeline.rs
src/render/shader/: mod.rs  shader_builder.rs
src/render/shader/assets/: basic.wgsl  copyright.wgsl  test.wgsl
src/render/shader/assets/struct/: struct_vertex_input.wgsl
src/test/: lib.rs
src/test/app2d/: active_info.rs  app2d.rs  mod.rs  schema.rs
src/test/content/: mod.rs
src/test/content/component/: mod.rs
src/test/content/control/: pancam.rs
src/test/content/dsl/: class_helpers.rs  mod.rs  widgets.rs
src/test/content/shape/: draw.rs  entity.rs  geometry.rs  mod.rs  path.rs  plugin.rs  shapes.rs
src/test/content/sync/: config.rs  mod.rs  plugin.rs  schema.rs  state.rs
src/test/ffi/: web.rs
src/test/utils/: id.rs  mod.rs  pool.rs
src/test/worker/: web_ffi.rs
src/utils/: id.rs  mod.rs  thread.rs
web/: .eslintrc  .gitignore  index.html  package.json  tsconfig.json  webpack.config.dev.js
web/src/: main.tsx
web/types/: custom.d.ts
