[package]
name = "rs_wgpu_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
winit = { version = "0.29", features = ["rwh_05"] }
log = "0.4"
wgpu = "22.1.0"
cfg-if = "1"
futures = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "22.1.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}


[lib]
crate-type = ["cdylib", "rlib"]
